removed semicolumn that was causing syntax error on running knex migratino

--- a/running-migrations-with-knex/index.html
+++ b/running-migrations-with-knex/index.html
@@ -165,7 +165,7 @@ module.exports = {
 
 exports.down = function(knex, Promise) {  
   return Promise.all([
-    knex.schema.dropTable('users');
+    knex.schema.dropTable('users')
   ])
 };
 </code></pre>
